Added schedPriority to DAF_OS that reacts to property and sets limit of realtime

--- a/bin/LASAGNEProperties.conf
+++ b/bin/LASAGNEProperties.conf
@@ -15,6 +15,7 @@
 [common]
 ACEBaseThreads             = 4      # Primary ACE Reactor threads
 DAFHexDumpWidth            = 16     # Display width in bytes
+DAFThreadPriorityEnable    = 1      # Enable users to change their thread priorities from normal
 DAFSvcActionTimeout        = 15     # seconds – Service Loader maximum blocking timeout
 DAFTaskDecayTimeout        = 30     # seconds – TaskExecutor Thread Decay Timeout
 DAFTaskEvictTimeout        = 6      # seconds – TaskExecutor Thread Eviction Timeout 
