Lots of changes after review with @mathersm-dst

--- a/bin/LASAGNEProperties.conf
+++ b/bin/LASAGNEProperties.conf
@@ -14,9 +14,10 @@
 
 [common]
 ACEBaseThreads                  = 4      # Primary ACE Reactor threads
-DAFBasePriority                 = 0      # +/- PriorityClass around 0 (Windows Only)
-DAFTaskThreadPriority           = 0      # +/- around 0 (+ ACE_DEFAULT_THREAD_PRIORITY)
-DAFThreadPriorityEnable         = 1      # Enable users to change their thread priorities from normal
+DAFPriorityClass                = 0      # +/- PriorityClass around 0 (Windows Only)
+DAFPriorityClassEnable          = 0      # Enable users to change their PriorityClass (Windows Only)
+DAFThreadPriority               = 0      # +/- around 0 (+ ACE_DEFAULT_THREAD_PRIORITY)
+DAFThreadPriorityEnable         = 0      # Enable users to change their thread priorities from normal
 DAFHexDumpWidth                 = 16     # Display width in bytes
 DAFSvcActionTimeout             = 15     # seconds – Service Loader maximum blocking timeout
 DAFTaskDecayTimeout             = 30     # seconds – TaskExecutor Thread Decay Timeout
